<resources>

  <!-- Main app name -->
  <string name="app_name" translatable="false">Frest</string>

  <!-- App short description -->
  <string name="app_secondary_name">A simple time tracker</string>

  <!-- Titles -->
  <string name="title_timeline">Timeline</string>
  <string name="title_all_activities">All activities</string>
  <string name="title_by_project">By project</string>
  <string name="title_projects">Projects</string>
  <string name="title_add_record">Add record</string>
  <string name="title_new_project">New project</string>
  <string name="title_home">Home</string>
  <string name="title_reports">Reports</string>
  <string name="title_share">Share</string>
  <string name="title_about">About</string>
  <string name="title_send_feedback">Send feedback</string>

  <!-- Plain texts -->
  <string name="text_project_already_running">This project is running already</string>
  <string name="text_spec_project_selection">%s\u0020\u0020\u2014\u0020\u0020%s</string>
  <string name="text_last_7_days">Last 7 days</string>
  <string name="text_last_30_days">Last 30 days</string>
  <string name="text_last_365_days">Last 365 days</string>
  <string name="text_all_time">All time</string>
  <string name="text_duration">Duration</string>
  <string name="text_date">Date</string>
  <string name="text_current_project">Current project</string>
  <string name="text_name">Name</string>
  <string name="text_enter_project_name">Enter project name</string>
  <string name="text_color">Color</string>
  <string name="text_duration_by_period">Duration by period:</string>
  <string name="text_cancel_current_project">Cancel current project?</string>
  <string name="text_remove_project_info">All project data will be removed.\nAre you sure?</string>
  <string name="text_third_party_icons">Third-party icons</string>
  <string name="text_share_title">Share a link</string>
  <string name="text_version">Version %s</string>

  <!-- Texts for stubs -->
  <string name="text_no_projects_reports_title">No projects to view reports</string>
  <string name="text_no_reports_title">No reports for this period</string>
  <string name="text_no_reports_description">Try to select another one</string>
  <string name="text_no_tasks_title">No record yet</string>
  <string name="text_no_tasks_description">It\'s a perfect time to start\ntracking any project</string>
  <string name="text_no_projects_title">No projects found</string>
  <string name="text_no_projects_description">Do you want to create a new one?</string>

  <!-- Actions -->
  <string name="action_save">Save</string>
  <string name="action_save_uppercase">SAVE</string>
  <string name="action_new_project">New project</string>
  <string name="action_delete_project">Delete project</string>
  <string name="action_delete_record">Delete record</string>
  <string name="action_start_new_session">Start a new session</string>
  <string name="action_add_record">Add record</string>
  <string name="action_no">No</string>
  <string name="action_yes">Yes</string>

  <!-- Errors -->
  <string name="error_zero_duration">Duration can\'t be zero</string>
  <string name="error_project_name_is_empty">Project name can\'t be empty</string>
  <string name="error_project_already_exists">Project with the same name already exists</string>

  <!-- Links -->
  <string name="link_mail">mailto:frest.contact@gmail.com</string>
  <string name="link_share">A simple and convenient time tracker for
    android: http://play.google.com/store/apps/details?id=%s</string>
  <string name="link_third_party_icons">Icons made by &lt;a href="https://www.freepik.com/">Freepik&lt;/a>
    from &lt;a href="https://www.flaticon.com/home">www.flaticon.com&lt;/a>
    &lt;br/>Icons made by &lt;a href="https://www.flaticon.com/authors/smashicons">Smashicons&lt;/a> from
    &lt;a href="https://www.flaticon.com/home">www.flaticon.com&lt;/a>
  </string>

  <!-- Time and date strings -->
  <string name="postfix_hour">h</string>
  <string name="postfix_minute">m</string>
  <string name="postfix_second">s</string>
  <string name="today">Today</string>
  <string name="yesterday">Yesterday</string>

  <!-- Other -->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
