<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:id="@+id/group_main"
    android:checkableBehavior="single">
    <item
      android:id="@+id/menu_home"
      android:icon="@drawable/ic_drawer_home"
      android:title="@string/title_home"/>
    <item
      android:id="@+id/menu_reports"
      android:icon="@drawable/ic_drawer_reports"
      android:title="@string/title_reports"/>
  </group>

  <group
    android:id="@+id/group_secondary">

    <item
      android:id="@+id/menu_share"
      android:icon="@drawable/ic_share"
      android:title="@string/title_share"/>

    <item
      android:id="@+id/menu_about"
      android:icon="@drawable/ic_drawer_about"
      android:title="@string/title_about"/>

    <item
      android:id="@+id/menu_send_help_feedback"
      android:icon="@drawable/ic_drawer_send_feedback"
      android:title="@string/title_send_feedback"/>
  </group>
</menu>
