<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <include layout="@layout/partial_toolbar_new_project"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/large_margin"
      android:layout_marginStart="@dimen/x_large_margin"
      android:text="@string/text_name"/>

    <EditText
      android:id="@+id/editTextProjectName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/small_margin"
      android:layout_marginStart="@dimen/large_margin"
      android:layout_marginEnd="@dimen/large_margin"
      android:padding="@dimen/medium_margin"
      android:background="@drawable/edit_text_bg"
      android:hint="@string/text_enter_project_name"
      android:inputType="text"
      android:maxLength="80"
      android:maxLines="1"/>

    <TextView
      android:id="@+id/textWarning"
      android:textStyle="normal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/x_small_margin"
      android:layout_marginStart="@dimen/x_large_margin"
      android:textColor="@android:color/holo_red_dark"
      android:textSize="@dimen/text_small"
      android:visibility="invisible"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/xx_large_margin"
      android:layout_marginStart="@dimen/x_large_margin"
      android:text="@string/text_color"/>

    <include
      layout="@layout/partial_layout_colors"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/large_margin"
      android:layout_marginStart="@dimen/small_margin"
      android:layout_marginEnd="@dimen/small_margin"/>

    <androidx.cardview.widget.CardView
      android:id="@+id/cardSaveProject"
      style="@style/CardView.Rounded"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/large_margin"
      android:layout_marginBottom="@dimen/large_margin"
      android:layout_gravity="center"
      android:onClick="onSaveProjectClick"
      android:visibility="invisible">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_margin"
        android:paddingStart="@dimen/large_margin"
        android:paddingEnd="@dimen/large_margin"
        android:text="@string/action_save"
        android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

</ScrollView>