<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.05"/>

  <ImageView
    android:id="@+id/imageLogo"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="@dimen/small_margin"
    android:layout_marginTop="@dimen/small_margin"
    android:src="@drawable/logo_main"
    app:layout_constraintBottom_toTopOf="@+id/guideline2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.25"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline1"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.24"/>

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/guideline3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline2"
    app:layout_constraintVertical_bias="1.0">

    <TextView
      android:id="@+id/textTitle"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textSize="@dimen/text_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageLogo"/>

    <TextView
      android:id="@+id/textSecondaryTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/small_margin"
      android:text="@string/app_secondary_name"
      android:textSize="@dimen/text_large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textTitle"/>

    <TextView
      android:id="@+id/textVersion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium_margin"
      android:text="@string/text_version"
      android:textColor="@color/itemDarkColor"
      android:textSize="@dimen/text_small"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textSecondaryTitle"/>

  </LinearLayout>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.45964432"/>

  <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/divider_height"
    android:layout_marginStart="@dimen/medium_margin"
    android:layout_marginEnd="@dimen/medium_margin"
    android:background="@color/dividerColor"
    app:layout_constraintTop_toTopOf="@id/guideline4"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.55"/>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutThirdPartyIcons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintTop_toTopOf="@+id/guideline4">

    <TextView
      android:id="@+id/textThirdPartyIcons"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium_margin"
      android:layout_marginBottom="@dimen/medium_margin"
      android:layout_marginStart="@dimen/large_margin"
      android:text="@string/text_third_party_icons"
      android:textColor="@color/colorAccent"
      android:textSize="@dimen/text_small"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium_margin"
      android:layout_marginBottom="@dimen/medium_margin"
      android:layout_marginEnd="@dimen/large_margin"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_keyboard_arrow_right"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/divider_height"
    android:layout_marginStart="@dimen/medium_margin"
    android:layout_marginEnd="@dimen/medium_margin"
    android:background="@color/dividerColor"
    app:layout_constraintTop_toBottomOf="@id/layoutThirdPartyIcons"/>

</androidx.constraintlayout.widget.ConstraintLayout>